# qico

./: .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt  README  config.cmake.h  configure.ac
debian/: control  qico.install  rules
freebsd/: Makefile
lib/: dlmalloc.c
src/: CMakeLists.txt  Makefile.am  anylist.c  anylist.h  binkp.c  binkp.h  call.c  charset.h  clserv.c  clserv.h  config.c  crc.c  daemon.c  des.c  des.h  emsi.c  flagexp.c  flagexp.h  flaglex.c  freq.c  ftn.c  ftn.h  getsid.c  hydra.c  janus.c  log.c  ls_zglue.c  ls_zmodem.c  ls_zmodem.h  ls_zreceive.c  ls_zsend.c  mailer.h  main.c  malloc.c  md5q.c  md5q.h  memcmp.c  modem.c  nodelist.c  nodelist.h  (+27 more)
tests/: CMakeLists.txt  test1.c
